--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.5",
     "@supabase/ssr": "^0.7.0",
+    "@supabase/supabase-js": "^2.86.0",
     "next": "16.0.4",
     "react": "19.2.0",
     "react-dom": "19.2.0"
