--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@gsap/react": "^2.1.2",
     "@mui/icons-material": "^7.3.6",
     "@mui/material": "^7.3.5",
     "@stream-io/video-react-sdk": "^1.28.1",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.86.0",
     "framer-motion": "^12.23.25",
-    "gsap": "^3.13.0",
+    "gsap": "^3.14.2",
     "next": "16.0.4",
     "react": "19.2.0",
     "react-dom": "19.2.0",
