--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "@supabase/supabase-js": "^2.86.0",
     "framer-motion": "^12.23.25",
     "gsap": "^3.14.2",
-    "next": "16.0.4",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "next": "^16.1.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "stream-chat": "^9.27.0",
     "stream-chat-react": "^13.13.0"
   },
